[gd_scene load_steps=2 format=3 uid="uid://bqw8xw2z7yhpk"]

[ext_resource type="Script" path="res://Scripts/Dialogs/enemy_edit_dialog.gd" id="1_enemy_dialog"]

[node name="EnemyEditDialog" type="Window"]
title = "編輯敵人"
initial_position = 2
size = Vector2i(700, 750)
script = ExtResource("1_enemy_dialog")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NameContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "名稱:"
vertical_alignment = 1

[node name="NameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
placeholder_text = "輸入敵人名稱"

[node name="HpContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HpContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "生命值:"
vertical_alignment = 1

[node name="HpInput" type="SpinBox" parent="MarginContainer/VBoxContainer/HpContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
min_value = 1.0
max_value = 99999.0
value = 100.0

[node name="StrengthContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/StrengthContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "力量:"
vertical_alignment = 1

[node name="StrengthInput" type="SpinBox" parent="MarginContainer/VBoxContainer/StrengthContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
max_value = 9999.0
value = 10.0

[node name="DefenseContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/DefenseContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "防禦:"
vertical_alignment = 1

[node name="DefenseInput" type="SpinBox" parent="MarginContainer/VBoxContainer/DefenseContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
max_value = 9999.0
value = 5.0

[node name="SpeedContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SpeedContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "速度:"
vertical_alignment = 1

[node name="SpeedInput" type="SpinBox" parent="MarginContainer/VBoxContainer/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
max_value = 9999.0
value = 5.0

[node name="ImageContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ImageContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "圖片:"
vertical_alignment = 1

[node name="ImagePathInput" type="LineEdit" parent="MarginContainer/VBoxContainer/ImageContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
placeholder_text = "圖片路徑"
editable = false

[node name="BrowseButton" type="Button" parent="MarginContainer/VBoxContainer/ImageContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "瀏覽"

[node name="ImagePreviewContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="ImagePreview" type="TextureRect" parent="MarginContainer/VBoxContainer/ImagePreviewContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="DescContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/DescContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "描述:"

[node name="DescInput" type="TextEdit" parent="MarginContainer/VBoxContainer/DescContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
placeholder_text = "輸入敵人描述(可選)"

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "取消"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "儲存"

[node name="FileDialog" type="FileDialog" parent="."]
title = "選擇敵人圖片"
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "選擇"
file_mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpg, *.jpeg ; 圖片檔案")

[connection signal="pressed" from="MarginContainer/VBoxContainer/ImageContainer/BrowseButton" to="." method="_on_browse_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
